[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/old_scripts/npc.gd" type="Script" id=1]
[ext_resource path="res://assets/images/basic_sprites/leftarm1.png" type="Texture" id=2]
[ext_resource path="res://assets/images/basic_sprites/rightarm1.png" type="Texture" id=3]
[ext_resource path="res://assets/images/basic_sprites/anim1.png" type="Texture" id=4]
[ext_resource path="res://assets/images/basic_sprites/anim3.png" type="Texture" id=5]
[ext_resource path="res://assets/images/basic_sprites/anim2.png" type="Texture" id=6]
[ext_resource path="res://assets/images/basic_sprites/dead1.png" type="Texture" id=7]


[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
} ]

[node name="npc" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="collision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -17.232, 6.0611, -17.232, -8.498, -7.20241, -17.2335, 5.09195, -17.557, 14.798, -8.498, 15.4451, 7.03171, 8.97438, 15.4436, -6.55533, 16.7378 )

[node name="left" type="Node2D" parent="."]

[node name="sprite_left" type="Sprite" parent="left"]
texture = ExtResource( 2 )

[node name="right" type="Node2D" parent="."]

[node name="sprite_right" type="Sprite" parent="right"]
texture = ExtResource( 3 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.323532, -0.970612 )
frames = SubResource( 1 )
animation = "dead"

[node name="vulnerable_area" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 66

[node name="vulnerable_shape" type="CollisionPolygon2D" parent="vulnerable_area"]
polygon = PoolVector2Array( -17.7358, 4.7428, -17.7358, -6.45738, -7.26838, -16.5061, 6.23464, -16.2968, 15.132, -6.98075, 15.4451, 5.41402, 8.01411, 14.1635, 1.21026, 15.1056, -8.10578, 14.7916, -14.3202, 9.29646 )
[connection signal="body_entered" from="vulnerable_area" to="." method="_on_vulnerable_area_body_entered"]
